CSS fix. Adds extra padding on the bottom of the article. So that all annotations are visible

--- a/assets/styles/application.css
+++ b/assets/styles/application.css
@@ -3,7 +3,7 @@ body {
 }
 
 .article {
-  padding: 10px 50px;
+  padding: 10px 50px 350px 50px;
 }
 
 #wrapper {
